# weather_forecast_at_the_cloud

./: README.md  config.yaml  pyproject.toml  run_preprocessing.py  run_training.py
notebooks/: colab_notebook.ipynb  training.ipynb  visualization.ipynb
src/weather_forecast_at_the_cloud/: data_handler.py  default_config.py  preprocess_data.py  train.py  write_default_config.py
src/weather_forecast_at_the_cloud/models/: base_model.py  cnn_weather_forecast.py  dense_weather_forecast.py  linear_weather_forecast.py  rnn_weather_forecast.py  utils.py
src/weather_forecast_at_the_cloud/utils/: configure.py  window_generator.py
