[project]
name = "weather-forecast-at-the-cloud"
version = "0.1.0"
description = "Machine learning applied to weather forecasting, with data from REM San Luis"
readme = "README.md"
authors = [
    { name = "DanielBerns", email = "daniel.w.berns@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pyyaml>=6.0.2",
    "tensorflow>=2.19.0",
]

[project.scripts]
weather-forecast-train = "weather_forecast_at_the_cloud.train:next_step"
weather-forecast-preprocess = "weather_forecast_at_the_cloud.preprocess_data:preprocess_data"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
